--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "data-for-countries",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://devendrk.github.io/",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
