--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "data-for-countries",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://devendrk.github.io/",
+  "homepage": "https://devendrk.github.io/data-for-countries",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
